--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "distroy",
-  "description": "Distroy — Chromium browser extension",
+  "description": "Distroy — GDPR-compliant mass deletion of your Discord messages",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,10 +15,12 @@
     "postinstall": "wxt prepare"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.2.0",
     "@tsconfig/svelte": "^5.0.7",
     "@wxt-dev/module-svelte": "^2.0.4",
     "svelte": "^5.49.2",
     "svelte-check": "^4.3.6",
+    "tailwindcss": "^4.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "wxt": "^0.20.17"
